initial pass on About page, still needs some typography edits and to fill in food partner links and the creation date of mayday

--- a/server/pb_hooks/pages/about.ejs
+++ b/server/pb_hooks/pages/about.ejs
@@ -1,1 +1,24 @@
-<h2>About</h2>
+<div class="text-balance w-1/1 lg:w-85/100 lg:max-w-340 w-90/100 max-w-360 md:m-auto">
+<h1 class="font-heading text-4xl md:text-5xl">About</h1>
+<p>May Day Cafe is where Powderhorn gathers. It has been a staple of the Powderhorn neighborhood in Minneapolis since ___. Over the decades, it has been loved and supported by generations of neighbors who have come from near and far to enjoy food, baked goods, and drinks from our scratch kitchen - or just to hang out and chat with old and new friends.</p>
+<p class="pt-4">When May Day was put up for sale in late 2023, workers began organizing a year-long campaign to transition the cafe to a worker-owned cooperative. The Cafe has been open and worker-owned since January 2025! We are so excited to carry the powerful legacy of May Day Cafe into a new era, rooted in worker dignity and with deep love for our community.</p>
+
+<h3 class="pt-4 text-2xl">Mission and Vision</h3>
+<p>The May Day Cafe Workers Cooperative mission is to be a home for dignified and meaningful labor, affordable food, and community connection in the heart of the Powderhorn neighborhood. We strive to contribute to a thriving and more powerful economy of worker cooperatives in Minneapolis, while using our physical cafe space to become a true “third space” - one that is welcoming, accessible, and fosters neighborhood interdependence.</p>
+
+<h3 class="pt-4 text-2xl">Food and Sourcing</h3>
+<p>Food is at the center of what we do. We are proud to serve a wide range of deli and bakery products all made in-house! When it comes to the food that we serve, we seek to respect ourselves as workers, our customers, and our broader ecosystem:</p>
+<ol class="pt-2 pl-2 list-decimal">
+    <li class="ml-4">As workers, we value food that is made with care and love for the food and ourselves</li>
+    <li class="ml-4">For customers, we value food that provides comfort, nourishment, and dependability</li>
+    <li class="ml-4">For our ecosystem, we value food that is sourced from our community, where people and planet are treated with respect</li>
+</ol>
+
+<p class="pt-4">We work with a number of local businesses to source our products, including:</p>
+<ul class="list-disc pt-2 pl-2">
+    <li class="ml-4">Heartbeat Farms</li>
+    <li class="ml-4">Bichota Coffee</li>
+    <li class="ml-4">Bakers Field Flour and Bread</li>
+    <li class="ml-4">The Good Acre</li>
+</ul>
+</div>
